made adjustments to original code

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
     <p>
       <ul>
         <li>Time Traveling Abilities</li>
-        <li>NASA Engineer<li>
-            <p>Experience building spaceships</p>
-            <p>Experience building spaceguns</p>
-        <li>Navigation Engineering (Mission on Mars)<li>
-            <p>Below is picture I helped take on Mars</p>
+        <li>NASA Engineer</li>
+          <ul>
+            <li>Experience building spaceships</li>
+            <li>Experience building spaceguns</li>
+          </ul>
+        <li>Navigation Engineering (Mission on Mars)</li>
+
+
+        <li>Below is picture I helped take on Mars</li>
               <a href="https://commons.wikimedia.org/wiki/File%3AMartian_Anniversary_Selfie.jpg" target="_blank">
                 <img src="Selfie.jpg" alt="Picture on Mars">
               </a>
