--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <h2>Education</h2>
 
     <p>    <strong><em>University of Space</em></strong>  (Bachelors in Space and Time)</p>
-      <p>
+
         <ul>
           <li><strong>Concentration in Time Travel</strong></li>
         </ul>
@@ -11,27 +11,28 @@
 
   <h2>Experience</h2>
 
-    <p>
+
       <ul>
         <li>Internship at NASA</li>
       </ul>
-    </p>
-    <p>
+
+
       <ul>
         <li>Internship at Area 51</li>
       </ul>
-    </p>
+
 
   <h2>Skills</h2>
 
-    <p>
+
       <ul>
         <li>Time Traveling Abilities</li>
-        <li>NASA Engineer</li>
+        <li>NASA Engineer
           <ul>
             <li>Experience building spaceships</li>
             <li>Experience building spaceguns</li>
           </ul>
+        </li>
         <li>Navigation Engineering (Mission on Mars)</li>
 
 
@@ -40,4 +41,4 @@
                 <img src="Selfie.jpg" alt="Picture on Mars">
               </a>
       </ul>
-    </p>
+    
